--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "iconizr",
+  "name": "svg-sprite-machine",
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Grant Staublin",
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.1",
